# udata

./: .babelrc  .bowerrc  .browserlistrc  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .eslintrc.yml  .gitignore  .jshintrc  .parcelrc  .postcssrc  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .remarkrc  .stylelinkrc_browser  .stylelintrc  .stylemark.yml  .tern-project  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  ISSUE_TEMPLATE.md  MANIFEST.in  Makefile  Procfile  Procfile.sample  README.md  README.rst  babel.cfg  bower.json  bumpr.rc  circle.yml  circleci-requirements.sh  circleci.dev.pip  circleci.master.pip  circleci.yml  (+36 more)
.circleci/: config.yml  requirements.pip
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.extend.yml
.github/: dependabot.yml
.github/workflows/: deploy-dokku-preview.yml
.tx/: config
cypress/integration/: datasets.js  home.js  pagination.js  search.js
cypress/support/: index.js
doc/: Makefile  api.rst  conf.py  configuration.rst  customize.rst  develop.rst  extends.rst  index.rst  make.bat  rest_api.rst  workers.rst
doc/_templates/: sidebarintro.html
docs/: adapting-settings.md  adding-translations.md  administrative-tasks.md  api-tokens.md  building-documentation.md  changelog.md  configuration.md  contributing-guide.md  creating-theme.md  develop.md  development-environment.md  docker-deployment.md  extending.md  features.md  geopf.md  getting-started.md  governance.md  harvesting.md  index.md  installation.md  launching-tasks.md  local-dependencies.md  plugins.md  quickstart.md  rdf.md  running-project.md  system-dependencies.md  terms.md  testing-code.md  versioning.md  versionning.md
docs/custom_theme/: searchbox.html
docs/roadmap/: udata-3.md
fixtures/: data.yml
js/: NonCachingExtractTextLoader.js  activities.js  admin.js  admin.routes.js  admin.vue  api.js  api.light.js  apidoc.js  apiv2.js  app.vue  auth.js  cache.js  class.js  common.js  config.js  dashboard.js  dom-polyfills.js  error.js  hljs.js  home.js  i18n.js  index.md  legacy.js  logger.js  main.js  microdata.js  mixin.js  notify.js  oembed.js  pubsub.js  raven.js  search.js  sentry.js  site.js  udata.js  urls.js  utils.js  widgets.js
js-admin/: app.vue  i18n.js  main.js  urls.js
js-admin/components/: identity.vue  time-widget.vue
js-admin/helpers/: colors.js  icons.js  text.js
js-admin/mixins/: modal.js
js-admin/models/: error.js  geogranularities.js
js-admin/plugins/: jquery.js  markdown.js
js-admin/views/: home.vue  organization-wizard.vue  post-wizard.vue
js/chart/: bar.js  base.js  line.js  timeserie.js
js/components/: add-menu.vue  alert.vue  avatar.vue  calendar.vue  content-header.vue  form-layout.vue  header.vue  identity.vue  layout.vue  leaflet-map.vue  modal.vue  notification-menu.vue  notification-zone.vue  pagination.vue  popover.vue  sidebar-menu-item.vue  sidebar.vue  site-search.vue  tab.js  tabs.vue  time-widget.vue  tooltip.vue  user-menu.vue
js/dashboard/: map.js  organization.js  site.js
js/dataset/: display.js  form.js  resource-form.js  typeahead.js
js/form/: common.js  dataset-completer.js  date-range-picker.js  extras.js  format-completer.js  image-field.js  markdown.js  reuse-completer.js  tag-completer.js  upload.js  user-completer.js  widgets.js  zone-completer.js
js/front/: apidoc.js  bootstrap.js  covermap.js  dashboard.js  home.js  mixin.js  post.js  reuse.js  search.js  site.js  territory.js  topic.js  user.js
js/helpers/: commonmark.js  icons.js  markdown.js  placeholders.js  text.js
less/: admin.less  adminlte-skin.less  dashboard.less  forms.less  home.less  markdown.less  metrics.less  oembed.less  post.less  site.less
less-admin/: adminlte-skin.bak.less  cards.less  nav-tabs.less
locales/: udata-admin.en.json  udata-admin.es.json  udata-admin.fr.json
migrations/: 2015-05-06-migrate-issues.js  2015-06-10-public-service-to-badges.js  2015-07-10-dataconnexions-badges.js  2015-08-19-migrate-resource-published.js  2015-09-14-generic-badges.js  2015-09-23-community-resources.js  2015-09-25-migrate-harvest-sources-validation.js  2015-09-28-fix-maaf-harvester-doublouns.js  2015-10-08-migrate-resources-field-names.js
parcel-reporter-copystatic/: index.js  package-lock.json  package.json
parcel-transformer-more/: index.js  loadConfig.js  package-lock.json  package.json
patches/: @meforma+vue-toaster+1.3.0.patch
requirements/: all.pip  circleci.pip  develop.in  develop.pip  doc.in  doc.pip  elasticsearch-travisci.sh  geo.pip  install.in  install.pip  report.in  report.pip  sentry.pip  test.in  test.pip  tools.pip  travis.pip  udata.in  udata.pip
scripts/: README.md  dev_setup_env.sh  dev_start_dev_env.sh  dev_start_docker_dbs.sh  dev_start_serve.sh  dev_start_venv.sh  dev_start_watch.sh  test_choice.sh
specs/: adapter.js  api.specs.js  cache.specs.js  chai-adapter.js  fixture.js  index.html  loader.js  microdata.specs.js  pubsub.specs.js  udata.json  udata.swagger.json  utils.specs.js
tasks/: __init__.py  helpers.py
theme/: admin.js  oembed.js  theme.js
udata/: PLAN.md  __init__.py  admin.py  api.py  api_fields.py  app.py  assets.py  auth.py  cgu.md  cors.py  entrypoints.py  errors.py  factories.py  fileutils.py  i18n.py  limiter.py  mail.py  patch_flask_security.py  rdf.py  routing.py  sentry.py  settings.py  sitemap.py  tags.py  tasks.py  terms.md  theme.py  tracking.py  uris.py  utils.py  worker.py  wsgi.py
udata-admin/: .gitignore  MANIFEST.in  babel.cfg  setup.cfg  webpack.config.js  webpack.config.prod.js
udata-harvest/: .travis.yml  setup.cfg  setup.py  tasks.py
udata_admin/: views.py
udata_front/: __init__.py  models.py  settings.py  tasks.py
udata_gouvfr/: __init__.py  commands.py  legacy-datasets.json  metrics.py  models.py  settings.py  tasks.py  territories.py  tests.py  views.py
udata_harvest/: actions.py  admin.py  api.py  commands.py  exceptions.py  filters.py  forms.py  models.py  signals.py  tasks.py
udata_search_service/: consumers.py  entities.py  search_clients.py  services.py  utils.py
(+2622 files in other folders)
